--- a/index.html
+++ b/index.html
@@ -62,5 +62,11 @@
         <input class="input" type="text" placeholder="Enter your email here"><button class="btn">Sign Up</button></div>
         </section>
     </main>
+    <footer class="footer">
+            <div class="left3"><h2><span class="span"> flower</span>Shop</h2>
+            <p>It is a long established that a reader will be distracted by the readable<br>
+            content of a page whene looking at its layout</p>
+
+    </footer>
 </body>
 </html>
