--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     </main>
     <footer class="footer">
             <div class="left3"><h2><span class="span"> flower</span>Shop</h2>
-            <p>It is a long established that a reader will be distracted by the readable<br>
+            <p class="pa">It is a long established that a reader will be distracted by the readable<br>
             content of a page whene looking at its layout</p>
-
+                &copy;<em id="date">2020-2023,flowerShop.com.All rights reserved</em>
     </footer>
 </body>
 </html>
