--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
         </div>
         <div class="picture">
-            <div class="pic1"><img src="flower Asset/pngwing 6.png"></div>
-            <div class="pic2"><img src="flower Asset/pngwing 5.png"></div>
+            <div class="pic1"><img id="mg" src="flower Asset/pngwing 6.png"></div>
+            <div class="pic2"><img id="mg1" src="flower Asset/pngwing 5.png"></div>
             <div class="pic3"><img src="flower Asset/pngwing 7.png"></div>
         </div>
         <div><ul>
@@ -52,7 +52,7 @@
         </div>
         <div class="picture2">
             <div class="pic4"><img src="flower Asset/pngwing 6.png"></div>
-            <div class="pic6"><img src="flower Asset/pngwing 5.png"></div>
+            <div class="pic5"><img src="flower Asset/pngwing 5.png"></div>
             <div class="pic6"><img src="flower Asset/pngwing 7.png"></div>
         </div> 
         </section>
