--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
             </div>
         </div>
         <div class="picture2">
-            <div class="pic4"><img src="flower Asset/pngwing 6.png"></div>
-            <div class="pic5"><img src="flower Asset/pngwing 5.png"></div>
-            <div class="pic6"><img src="flower Asset/pngwing 7.png"></div>
+            <div class="pic4"><img src="flower Asset/Flower 01.png"></div>
+            <div class="pic5"><img src="flower Asset/Rectangle 4.png"></div>
+            <div class="pic6"><img src="flower Asset/Rectangle 5.png"></div>
+            <div class="pic7"><img src="flower Asset/Rectangle 6.png"></div>
         </div> 
         </section>
         <section class="section3">
